<resources>
    <string name="app_name">Laundry 25</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="ic_splashscreen">Ikon Splashscreen</string>
    <string name="network_unavailable">Tidak Ada Koneksi Internet</string>
    <string name="login_page">Masuk,</string>
    <string name="ic_login">Ikon Login</string>
    <string name="username">Username</string>
    <string name="id_user_type_patient">0</string>
    <string name="id_user_type_companion">1</string>
    <string name="success_">success</string>
    <string name="ic_item_dashboard">Ikon Item Dashboard</string>
    <string name="menu_report">Laporan</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_profile">Profile</string>
    <string name="title_title">Sistem Manajemen Lokasi Customer</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="yes_">Ya</string>
    <string name="no_">Tidak</string>
    <string name="ok_">OK</string>
    <string name="title_profiles">Profil</string>
    <string name="dont_have_account">Belum memiliki akun? Daftar</string>
    <string name="welcome_page">Selamat Datang,</string>
    <string name="firstname">Nama Depan</string>
    <string name="lastname">Nama Belakang</string>
    <string name="repassword">Konfirmasi Password</string>
    <string name="title_experts">Experts</string>
    <string name="title_scale"><![CDATA[Scale&Measurement]]></string>
    <string name="title_profile">Profil</string>
    <string name="title_welcome">Halo %s,</string>
    <string name="do_you_pregnant">Apakah Anda Sedang Hamil?</string>
    <string name="first_date_menstruation">Tanggal Pertama Haid Terakhir</string>
    <string name="choice_your_date">Pilih Tanggal Anda</string>
    <string name="pattern_date">MM/dd/yyyy</string>
    <string name="rate_us">Beri Bintang</string>
    <string name="your_gestational_age">Usia Kandungan anda sekarang %s bulan</string>
    <string name="ic_video">Ikon Vide</string>
    <string name="next_video">Video Selanjutnya di %s</string>
    <string name="title_experts_profile">Profil Pakar</string>
    <string name="ic_experts">Pakar</string>
    <string name="specialist">Spesialis</string>
    <string name="ic_profile">Ikon Profil</string>
    <string name="change_photo">Ubah Foto</string>
    <string name="change_password">Ubah Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="information">Informasi</string>
    <string name="success_process">Proses Berhasil</string>
    <string name="list_order">Data Pesanan</string>
    <string name="searching">Pencarian</string>
    <string name="name">Nama</string>
    <string name="weight">Berat</string>
    <string name="desc">Deskripsi</string>
    <string name="save">Simpan</string>
    <string name="unfinished">Belum Diambil</string>
    <string name="finished">Sudah Diambil</string>
    <string name="isFinished">Apakah Telah Diambil?</string>
    <string name="confirmation_delete">Apakah Akan Dihapus?</string>
    <string name="confirmation_exit">Apakah Anda Ingin Keluar?</string>
    <string name="address">Alamat</string>
</resources>
